.k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit-app-deployment
  labels:
    app: streamlit-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit-app
  template:
    metadata:
      labels:
        app: streamlit-app
    spec:
      containers:
        - name: streamlit-container
          image: ghcr.io/fredmontet/template-streamlit-app:latest
          ports:
            - containerPort: 8501
