.k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-app-service
spec:
  selector:
    app: streamlit-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
  type: LoadBalancer
