.k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit-app-ingress
spec:
  rules:
    - host: streamlit-app.kube.isc.heia-fr.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamlit-app-service
                port:
                  number: 80
